# ubibot-SmartPlug

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.back  sdkconfig.old
components/: Nvs.tar.xz
components/Bluetooth/: Bluetooth.c  CMakeLists.txt
components/Bluetooth/include/: Bluetooth.h
components/CRC8_16/: crc8_16.c
components/CRC8_16/include/: crc8_16.h
components/CSE7759B/: CMakeLists.txt  CSE7759B.c
components/CSE7759B/include/: CSE7759B.h
components/Cache_data/: CMakeLists.txt  Cache_data.c
components/Cache_data/include/: Cache_data.h
components/E2prom/: CMakeLists.txt  E2prom.c
components/E2prom/include/: E2prom.h
components/EC20/: CMakeLists.txt  EC20.c
components/EC20/include/: EC20.h
components/Http/: CMakeLists.txt  Http.c  http.c
components/Http/include/: Http.h
components/Json_parse/: CMakeLists.txt  Json_parse.c
components/Json_parse/include/: Json_parse.h
components/Led/: CMakeLists.txt  Led.c
components/Led/include/: Led.h
components/Mqtt/: CMakeLists.txt  Mqtt.c  README.md
components/Mqtt/include/: Mqtt.h
components/My_Mqtt/: CMakeLists.txt  My_Mqtt.c
components/My_Mqtt/include/: My_Mqtt.h
components/My_Spi_flash/: my_spi_flash.c
components/My_Spi_flash/include/: my_spi_flash.h
components/Nvs/: Nvs.c
components/Nvs/include/: Nvs.h
components/RS485_Read/: CMakeLists.txt  RS485_Read.c
components/RS485_Read/include/: RS485_Read.h
components/RtcUsr/: CMakeLists.txt  RtcUsr.c
components/RtcUsr/include/: RtcUsr.h
components/ServerTimer/: CMakeLists.txt  ServerTimer.c
components/ServerTimer/include/: ServerTimer.h
components/Smartconfig/: CMakeLists.txt  Smartconfig.c
components/Smartconfig/include/: Smartconfig.h
components/Software_UART/: soft_uart.c
components/Software_UART/include/: soft_uart.h
components/Spi_flash/: CMakeLists.txt  my_spi_flash.c
components/Spi_flash/include/: my_spi_flash.h
components/Switch/: CMakeLists.txt  Switch.c
components/Switch/include/: Switch.h
components/Uart0/: CMakeLists.txt  Uart0.c
components/Uart0/include/: Uart0.h
components/Wind/: Wind.c
components/Wind/include/: Wind.h
components/bsp/: tcp_bsp.c
components/bsp/include/: tcp_bsp.h
components/crc8_16/: CMakeLists.txt
components/ds18b20/: CMakeLists.txt  ds18b20.c
components/ds18b20/include/: ds18b20.h
components/include/: include.h
components/my_base64/: CMakeLists.txt  my_base64.c
components/my_base64/include/: my_base64.h
components/ota/: CMakeLists.txt  ota.c
components/ota/include/: ota.h
components/tcp_bsp/: CMakeLists.txt
components/user_keydriver/: CMakeLists.txt  user_app.c  user_key.c
components/user_keydriver/include/: user_app.h  user_key.h
main/: CMakeLists.txt  app_main.c
